[package]
name = "roma"
version = "0.1.0"
authors = ["Guillaume (Goliver) Golay <goliworks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", features = ["rustls"] }
actix-rt = "1.0"
rustls = "0.16"
x509-parser =  "0.7"
serde = "1.0"
serde_yaml = "0.8"
dirs = "3.0.1"
